# mcp-foundry

./: .env.example  README.md  __main__.py  azure_ai_foundryeval_mcp_v2.py  mcp.json  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: main_mcp-foundry.yml
Foundry-Agent-Service/: README.md
Foundry-Content-Safety/: README.md
Foundry-Knowledge/: README.md
Foundry-Models/: README.md
Foundry-Observability/: README.md
clients/: README.md
clients/python/pydantic-ai/: .env.example  README.md
clients/vscode/: README.md
clients/vscode/mcp-configs/: mcp.sse.json  mcp.stdio.pipx.1.json  mcp.stdio.pipx.2.json  mcp.stdio.pipx.json  mcp.stdio.uv.json  mcp.stdio.uvx.1.json  mcp.stdio.uvx.2.json  mcp.stdio.uvx.local.json
mcp_foundry/: __main__.py  models.py  utils.py
mcp_foundry_model/: utils.py
src/mcp_foundry/: __main__.py  mcp_server.py
src/mcp_foundry/mcp_foundry_evaluation/: tools.py
src/mcp_foundry/mcp_foundry_knowledge/: resources.py  tools.py
src/mcp_foundry/mcp_foundry_knowledge/data_access_objects/: dao.py
src/mcp_foundry/mcp_foundry_model/: models.py  tools.py  utils.py
tests/: pytest.ini  test_main.py  test_mcp.py  test_mcp_foundry_tool.py  test_utils.py
