[project]
name = "mcp-foundry-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.8.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "requests>=2.32.3",
]

[project.scripts]
run-azure-foundry-mcp = "mcp_foundry_model.main:main"
