[project]
name = "mcp-foundry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.8.0",
    "requests>=2.32.3",
]

[dependency-groups]
test = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
]
[tool.pytest.ini_options]
pythonpath = ["src"]

[project.scripts]
run-azure-foundry-mcp = "mcp_foundry.__main__:main"
